--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ span {
     justify-content: center;
     align-items: center;
     height: 80vh;
+    margin-bottom: 20vh;
     background-color: #E5E4E2;
     opacity: 0;
     animation: fadeInUp 1s ease-out forwards;
@@ -69,6 +70,45 @@ span {
 .homeText p {
     width: 300px;
 }
+
+.skillsContainer {
+    padding: 50px;
+    background-color: #f4f4f4;
+    text-align: center;
+}
+
+.skillsContainer h2 {
+    font-size: 28px;
+}
+
+.skill {
+    margin: 20px 0;
+    text-align: left;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.skill span {
+    font-weight: bold;
+}
+
+.progress {
+    width: 100%;
+    height: 10px;
+    background-color: #ddd;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 5px;
+}
+
+.progressBar {
+    height: 100%;
+    width: 0%;
+    background-color: #4682B4;
+    transition: width 1.5s ease-in-out;
+}
+
 
 @keyframes fadeInUp {
     from {
