--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,47 @@ nav ul li a:hover {
 
 /* About */
 
+/* Projects */
+
+.projectsContainer {
+    text-align: center;
+    padding: 50px;
+    background-color: #f4f4f4;
+}
+.projectsGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
+}
+.projectCard {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.15);
+    text-align: center;
+    height: fit-content;
+}
+
+.projectCard p {
+    text-align: left;
+}
+.projectCard h2 {
+    margin-bottom: 10px;
+    color: #2C3539;
+}
+
+.projectCard h4 {
+    color: #4682B4;
+}
+.projectCard p {
+    font-size: 14px;
+    color: #333;
+}
+
+/* Projects */
+
 /* Fade transition */
 
 @keyframes fadeInUp {
